Revert "Fix layout on narrow viewports"
This reverts commit 09242d1b878a46fc4b69745dd2df0393c196d950.

--- a/services/ui/src/styles/_layout.scss
+++ b/services/ui/src/styles/_layout.scss
@@ -13,16 +13,7 @@
 
   display: grid;
 
-  grid-auto-rows: var(--row-size);
-
-  grid-template-columns: repeat(
-    auto-fit,
-    var(--column-size, minmax(min(30rem, 100%), 1fr))
-  );
-}
-
-[data-colspan="full"] {
-  grid-column: 1 / -1;
+  grid-template-columns: repeat(auto-fit, minmax(min(30rem, 100%), 1fr));
 }
 
 :where(.flow) > * + * {
